<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:contentPaddingBottom="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guide_80"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guide_80"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/track_name"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/item_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="5dp"
            android:text="@string/track_genre"/>

        <TextView
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_name"
            app:layout_constraintLeft_toRightOf="@id/item_genre"
            android:layout_marginStart="5dp"
            android:text="@string/divider"/>

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_name"
            app:layout_constraintLeft_toRightOf="@id/divider"
            android:layout_marginStart="5dp"
            android:text="@string/track_price"/>

        <android.support.constraint.Guideline
            android:id="@+id/horizontal_guide_80"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>